--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -117,11 +117,6 @@ jp: /tactic-maker/?lang=jp
 
     <!-- Party Settings -->
     <section class="party-section">
-        <!-- Wonder Config Panel (above party slots) -->
-        <div class="wonder-config-panel" id="wonderConfigContainer">
-            <!-- Wonder Config injected here -->
-        </div>
-
         <div class="party-slots-wrapper">
             <div class="party-slots-container" id="partySlots">
                 <!-- Slot 1 -->
@@ -168,6 +163,12 @@ jp: /tactic-maker/?lang=jp
                 <!-- Character icons will be injected here -->
             </div>
         </div>
+        <!-- Wonder Config Panel (below party slots) -->
+        <div class="wonder-config-panel" id="wonderConfigContainer">
+            <!-- Wonder Config injected here -->
+        </div>
+
+
     </section>
 
     <!-- Wonder Modal Trigger - Removed (Moved to Wonder Card) -->
