--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -167,8 +167,10 @@ jp: /about/?lang=jp
                             <li>EMajorinc</li> <!--30$ 26/01/21-->
                             <li>안*현</li> <!--30000 25/09/10-->
                             <li>이*현</li> <!--30000 26/01/02-->
+                            <li>Sages</li> <!--6$ 25/09/06 20$ 26/01/31--> 
                             <li>ue</li> <!--15$ 25/09/09-->
                             <li>Skizor Kurogane</li><!--21$ 25/12/20-->
+                            <li>Zeloid</li><!--21$ 26/01/31 -->
                             <li>rudytudysubs</li><!--15$ 26/01/18-->
                             <li>Trishelle</li> <!--12$ 26/01/20-->
                             <li>skippy</li> <!--12$ 26/01/21-->
@@ -180,19 +182,22 @@ jp: /about/?lang=jp
                             <li>카미유</li> <!--10000 25/07/18-->
                             <li>서*일</li> <!--10000 25/09/19-->
                             <li>ochette</li> <!--6$ 25/06/18-->
-                            <li>Sages</li> <!--6$ 25/09/06-->
                             <li>Denys</li> <!--6$ 25/12/27-->
                             <li>Matsu</li> <!--6$ 25/12/31-->
                             <li>Viiun</li> <!--6$ 26/01/02-->
                             <li>ShibaEnjoyer</li> <!--6$ 26/01/12-->
                             <li>Seagull</li> <!--6$ 26/01/20-->
                             <li>Odderpop</li> <!--6$ 26/01/21-->
+                            <li>lpmafiota</li> <!--6$ 26/01/31-->
+                            <li>Ieat coffe</li> <!--6$ 26/01/31-->
+                            <li>Dinjoralo</li> <!--5$ 26/01/31-->
                             <li>Nova</li> <!--3$ 26/01/07-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
                             <li>Main</li> <!--3$ 25/10/18-->
                             <li>Shira</li> <!--3$ 26/01/20-->
                             <li>Figaf Hguk</li> <!--3$ 26/01/21-->
                             <li>Vexx</li> <!--3$ 26/01/29-->
+                            <li>W.AlexRonke</li> <!--3$ 26/01/31-->
                             <li>Ian</li><!--3000 25/06/20-->
                         </ul>
                     </div>
