--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -163,6 +163,7 @@ jp: /tactic-maker/?lang=jp
                 <!-- Character icons will be injected here -->
             </div>
         </div>
+        <div class="need-stat-container" id="needStatContainer" hidden></div>
         <!-- Wonder Config Panel (below party slots) -->
         <div class="wonder-config-panel" id="wonderConfigContainer">
             <!-- Wonder Config injected here -->
