--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -15,6 +15,7 @@ redirect_from:
 - /kr/defense-calc/
 ---
 
+<script src="{{ site.baseurl }}/data/characters/J&C/JC_calc.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/data/persona/order.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/assets/js/persona-loader.js?v={{ site.time | date: '%s' }}"></script>
 <script>
