--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -11,6 +11,7 @@ alternate_urls:
 en: /tactic-maker/?lang=en
 jp: /tactic-maker/?lang=jp
 ---
+{% include supabase-config.html %}
 
 <!-- Force Rebuild -->
 <!-- Tactic Maker CSS -->
