--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -85,6 +85,14 @@ jp: /tactic-maker/?lang=jp
                     <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
                 </svg>
             </button>
+            <button id="btnUpload" class="btn-refresh btn-storage btn-icon-hover" type="button" data-tooltip="업로드" data-i18n-tooltip="upload">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                    <polyline points="17 8 12 3 7 8"/>
+                    <line x1="12" y1="3" x2="12" y2="15"/>
+                </svg>
+            </button>
             <button id="btnCapture" class="btn-refresh btn-storage btn-icon-hover" type="button" data-tooltip="캡처" data-i18n-tooltip="capture">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
