--- a/apps/synergy/index.html
+++ b/apps/synergy/index.html
@@ -29,7 +29,7 @@ jp: /synergy/?lang=jp
     <script src="{{ site.baseurl }}/data/kr/characters/characters.js?v={{ site.time | date: '%s' }}"></script>
 
     <!-- i18n 서비스 -->
-    <script type="module" src="{{ site.baseurl }}/i18n/service/i18n-service.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/i18n/service/i18n-service.js?v={{ site.time | date: '%s' }}"></script>
     <script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
 
     <div class="navigation-path">
