--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -168,12 +168,14 @@ jp: /about/?lang=jp
                             <li>안*현</li> <!--30000 25/09/10-->
                             <li>이*현</li> <!--30000 26/01/02-->
                             <li>Sages</li> <!--6$ 25/09/06 20$ 26/01/31--> 
-                            <li>ue</li> <!--15$ 25/09/09-->
-                            <li>Skizor Kurogane</li><!--21$ 25/12/20-->
+                            <li>Skizor Kurogane</li><!--21$ 25/12/20 3$ 26/02/05-->
                             <li>Zeloid</li><!--21$ 26/01/31 -->
+                            <li>ue</li> <!--15$ 25/09/09-->
                             <li>rudytudysubs</li><!--15$ 26/01/18-->
+                            <li>ZexVolts</li><!--15$ 26/02/01-->
                             <li>Trishelle</li> <!--12$ 26/01/20-->
                             <li>skippy</li> <!--12$ 26/01/21-->
+                            <li>Chron</li> <!--12$ 26/02/01-->
                             <li>Xylex(SEA)</li> <!--6$ 25/11--> <!--6$ 26/01/29-->
                             <li>kai</li> <!--9$ 25/08/22-->
                             <li>김*환</li> <!--9$ 25/07/18-->
@@ -198,6 +200,9 @@ jp: /about/?lang=jp
                             <li>Figaf Hguk</li> <!--3$ 26/01/21-->
                             <li>Vexx</li> <!--3$ 26/01/29-->
                             <li>W.AlexRonke</li> <!--3$ 26/01/31-->
+                            <li>Dddock</li><!--3$ 26/02/03-->
+                            <li>Ravengod</li><!--3$ 26/02/03-->
+                            <li>Night Phoenix</li><!--3$ 26/02/01-->
                             <li>Ian</li><!--3000 25/06/20-->
                         </ul>
                     </div>
